--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -28,19 +28,17 @@
         emulated:   (boolean) the storage is emulated via the FUSE sdcard daemon
         mtpReserve: (integer) number of megabytes of storage MTP should reserve for free storage
                      (used for emulated storage that is shared with system's data partition)
+        allowMassStorage: (boolean) true if this volume can be shared via USB mass storage
+        maxFileSize: (integer) maximum file size in megabytes
 
       A storage should not have both emulated and removable set to true
 -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-    <storage android:storageDescription="@string/storage_internal"
-             android:emulated="true"
-             android:primary="true"
-             android:mtpReserve="100" />
-
-    <storage android:mountPoint="/storage/sdcard1"
-             android:storageDescription="@string/storage_sd_card"
-             android:primary="false"
-             android:removable="true"
-             android:allowMassStorage="true" />
+    <storage android:mountPoint="/storage/primary/legacy"
+        android:storageDescription="@string/storage_sd_card"
+        android:primary="true"
+        android:allowMassStorage="true"
+        android:removable="true"
+        android:maxFileSize="4096" />
 </StorageList>
