--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -33,17 +33,16 @@
 -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-
     <storage android:mountPoint="/storage/sdcard0"
-                android:storageDescription="@string/storage_internal"
-                android:primary="true"
-                android:removable="false"
-                android:allowMassStorage="true" />
+                 android:storageDescription="@string/storage_internal"
+                 android:primary="true"
+                 android:removable="false"
+                 android:emulated="true"
+                 android:allowMassStorage="true" />
 
-    <!-- removable is not set in nosdcard product -->
     <storage android:mountPoint="/storage/sdcard1"
-                android:storageDescription="@string/storage_sd_card"
-                android:primary="false"
-                android:removable="true"
-                android:allowMassStorage="true" />
+                 android:storageDescription="@string/storage_sd_card"
+                 android:primary="false"
+                 android:removable="true"
+                 android:allowMassStorage="true" />
 </StorageList>
